<resources>
    <string name="app_name">Cafépp</string>
    <string name="cafépp_allcaps">CAFÉPP</string>
    <string name="cafepp_allcaps">CAFEPP</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia porta lacinia. Donec bibendum risus at metus tristique, nec facilisis est auctor. Donec porttitor libero in lacinia tincidunt. Maecenas eget nunc tincidunt, imperdiet massa et, efficitur augue.</string>

    <string name="home">Home</string>
    <string name="tables">Tables</string>
    <string name="stock">Stock</string>
    <string name="statistics">Statistics</string>

    <string name="client_type">Client Type:</string>
    <array name="clientTypes">
        <item name="cashier">Cashier</item>
        <item name="cook">Cook</item>
        <item name="customer">Customer</item>
        <item name="manager">Manager</item>
        <item name="waiter">Waiter</item>
    </array>

    <array name="table_situation">
        <item name="free">FREE</item>
        <item name="occupied">OCCUPIED</item>
        <item name="reserved">RESERVED</item>
    </array>

    <string name="cashier">Cashier</string>
    <string name="cook">Cook</string>
    <string name="customer">Customer</string>
    <string name="manager">Manager</string>
    <string name="waiter">Waiter</string>

    <string name="title_activity_menu">Menu</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Weight</string>
    <string name="calorie">Calorie</string>
    <string name="calculate">Calculate</string>
    <string name="done">Done</string>
    <string name="add_a_product">Add a product</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="add_images">Add Images</string>
    <string name="categories">Categories</string>
    <string name="add_category">ADD CATEGORIES</string>
    <string name="choose_category_image">Choose Category Image</string>
    <string name="add_ingredient">ADD INGREDIENTS</string>
    <string name="ingredients">Ingredients</string>
    <string name="IncludeAllIngredients">Include all ingredients to calculation</string>
    <string name="show">show</string>
    <string name="show_all_in_menu">Show all in the menu</string>
    <string name="delete_question">Delete?</string>
    <string name="ideal_image_res">Your ideal images resolution: </string>
    <string name="company_logo_comes_here">Company logo comes here.</string>
    <string name="background_image_of_the_activity">Background images of the context.</string>
    <string name="there_is_not_any_product">There is not any product.</string>
    <string name="there_is_not_any_category">There is not any category.</string>
    <string name="order">Order</string>
    <string name="search_button">search button</string>
    <string name="Press_twice_back_button_to_exit">Press twice back button to exit.</string>
    <string name="admin_request">This permisson is required for locking the device screen to prevent your customers to reach undesired activities.</string>
    <string name="enter_as_administrator">ENTER AS ADMINISTRATOR</string>
    <string name="connect_allcaps">CONNECT</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_to_devices">Connected to devices!</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="settings">Settings</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="confirm">Confirm</string>
    <string name="device_name">Device Name</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="cafepp_device">Cafepp Device</string>
    <string name="show_password">Show password</string>
    <string name="password">password</string>
    <string name="wifi_image_description">Wifi image changes when it is connected to a device.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="devices">Devices</string>
    <string name="add_new_devices">Add new devices.</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="add_devices">Add Devices</string>
    <string name="my_device">My Device</string>
    <string name="available_devices">Available Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="device_name_semicolon">Device Name:</string>
    <string name="pair_key_semicolon">Pair Key:</string>
    <string name="pair">Pair</string>
    <string name="does_it_match">Pair if the pair key matches with the device you are trying to connect.</string>
    <string name="paired_devices_semicolon">Paired Devices:</string>
    <string name="refresh">Refresh</string>
    <string name="decline">Decline</string>
    <string name="only_visible_to_paired_devices">Only visible to paired devices.</string>
    <string name="visible_to_every_device">Visible to every device.</string>
    <string name="main_device">Main Device</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unpair">Unpair</string>
    <string name="connect_fragment_content">Device Name:\nMAC Address:\nIP Address:</string>
    <string name="refresh_discovery_for_devices">Refresh discovery for devices.</string>
    <string name="situation">Situation</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="payment">Payment</string>
    <string name="order_cancellation">Order Cancellation</string>
    <string name="qty">Qty.:</string>
    <string name="title_activity_cook">CookActivity</string>
    <string name="products">Products</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="add_table">Add Table</string>
    <string name="tables_semicolon">Tables:</string>
    <string name="location_name">Location Name</string>
    <string name="table_number">Table number</string>
    <string name="table_locations">Table Locations</string>
    <string name="there_is_already_a_location_with_the_same_name">There is already a location with the same name.</string>
    <string name="pick_table_number">Pick table number</string>
    <string name="remove">Remove</string>
    <string name="edit_location">Edit location</string>
    <string name="add_a_location">Add a location</string>
    <string name="table_status_semicolon">Table status:</string>
    <string name="status">Status</string>
    <string name="take_order">Take Order</string>
    <string name="control_table">Control table</string>
    <string name="table_status">Table Status</string>
    <string name="reserved_allcaps">RESERVED</string>
    <string name="free_allcaps">FREE</string>
    <string name="occupied">OCCUPIED</string>
    <string name="change_table_status">Change table status</string>
    <string name="table_info">Table Info</string>
    <string name="location_semicolon">Location:</string>
    <string name="number_semicolon">Number:</string>
    <string name="status_semicolon">Status:</string>
    <string name="opening_date_semicolon">Opening Date:</string>
    <string name="price_semicolon">Price:</string>

</resources>
