<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/table"
            android:title="@string/tables" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/stock"
            android:title="@string/stock" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/devices"
            android:title="@string/devices" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_grey"
            android:title="@string/settings" />
    </group>

</menu>
