<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="450dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/stroke_white_background"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="center"
    tools:context=".fragments.PairFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deviceNameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name_semicolon"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/deviceNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/connect_switch_margin_bottom"
            android:text="DeviceName"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pairKeyLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pair_key_semicolon"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/pairKeyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/connect_switch_margin_bottom"
            android:text="12345"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/pair_key_font_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/does_it_match"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seperatorH"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_padding"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/seperatorV"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_padding"
            android:text="@string/pair"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>