<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="450dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/stroke_white_background"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="center"
    tools:context=".fragments.ConnectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/deviceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/device_name"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/showPasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/showPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_password" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seperatorH"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_padding"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/seperatorV"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_padding"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>